# stories-together

./: .gitignore  README.md  package-lock.json
.github/workflows/: deploy.yml
backend/: .env.example
backend/app/: .env.example  README.md  __main__.py  exceptions.py  pyproject.toml  server.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 6bd343cfc662_cascade_on_delete_for_stories_passages.py  89e0e3eddc5f_user_roles_admin_flag.py  bf698a87e4cc_initial_migration.py  f7696c81ff37_story_title_index_for_quick_searching.py
backend/app/db/: models.py  session.py
backend/app/repositories/: auth.py  passage.py  statistics.py  story.py  user.py
backend/app/routes/: admin.py  stories.py  user_auth.py
backend/app/schemas/: passage.py  statistics.py  story.py  user.py
backend/app/services/: activity_log.py  rate_limiter.py
backend/tests/: .env.test  .env.test.example  conftest.py  test_admin.py  test_auth.py  test_stories.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: admin.js  auth.js  client.js
frontend/src/components/shared/: AdminSidebar.jsx  AdminStats.jsx  AdminUserDetail.jsx  AdminUserList.jsx  AdminUserModeration.jsx  Footer.jsx  Header.jsx  (+2 more)
frontend/src/hooks/: useAuth.js  useTokenRefresh.js
frontend/src/pages/: Admin.jsx  AllStories.jsx  Contribute.jsx  CreateStory.jsx  Home.jsx  Login.jsx  Profile.jsx  StoryPath.jsx  ViewStory.jsx
frontend/src/utils/: wordCount.js
planning/: admin_panel.md  architecture.md  brainstorm.md  design.md  plan.md
