[project]
name = "stories-together-api"
version = "0.1.0"
description = "A collaborative storytelling API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.30",
    "pydantic[email]>=2.7.0",
    # Auth system compatible with SQLAlchemy
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.2.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "pyjwt[crypto]>=2.12.1",
    "pwdlib[argon2]>=0.3.0",
    "uvicorn>=0.42.0",
    "gunicorn>=25.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.hatch.build.targets.wheel]
packages = ["app"]
